# Sources/openapi.yaml
@@ -107,6 +107,50 @@ paths:
                   reason:
                     type: string
                     example: "Passwords did not match"
+  /users/{user_id}/mybooks:
+    get:
+      operationId: GetMyBooks
+      summary: Get all myBooks for a user
+      parameters:
+        - name: user_id
+          in: path
+          required: true
+          description: The ID of the user
+          schema:
+            type: string
+      responses:
+        '200':
+          description: A list of myBooks
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/myBooks'
+    post:
+      operationId: addBookToMyList
+      summary: Create a new myBooks for a user
+      parameters:
+        - name: user_id
+          in: path
+          required: true
+          description: The ID of the user
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/myBooks'
+      responses:
+        '201':
+          description: The created myBooks
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/myBooks'
+
 components:
   schemas:
     Book:
@@ -155,6 +199,25 @@ components:
         passwordHash:
           type: string
           format: password
+    myBooks:
+      type: object
+      required:
+        - id
+        - user
+        - book
+        - read
+      properties:
+        id:
+          type: string
+          format: uuid
+        user:
+          $ref: '#/components/schemas/User'
+        book:
+          $ref: '#/components/schemas/Book'
+        read:
+          type: boolean
+      xml:
+        name: myBooks
   securitySchemes:
     BasicAuth:
       type: http
